package com.rapassos.smart_production_planner.sales.domain;

public enum OrderStatus {
    PENDING, IN_PRODUCTION, COMPLETED, CANCELLED
}
